fixed header vertical align

--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@ header{
 
 img{
     height: 80px;
+    vertical-align: middle;
 }
 
 #title{
@@ -20,6 +21,7 @@ img{
     font-size: 50px;
     display: inline-block;
     text-align: center;
+    vertical-align: middle;
 }
 
 body{
